fix Imprint page and HeatPump Page

--- a/overlay.qrc
+++ b/overlay.qrc
@@ -13,6 +13,7 @@
         <file>SOURCE_AVAIL_en_US.txt</file> 
     </qresource>
     <qresource prefix="/ui">
+        <file>system/ConsolinnoUsersSettingsPage.qml</file>
         <file>images/leaf.svg</file>
         <file>Configuration.qml</file>
         <file>wizards/ConnectionWizard.qml</file>
@@ -21,6 +22,7 @@
         <file>images/leaflet-connect.png</file>
         <file>mainviews/LegendTile.qml</file>
         <file>components/ConsolinnoButton.qml</file>
+        <file>components/ConsolinnoImprintSystem.qml</file>
         <file>components/ConsolinnoImprintApp.qml</file>
         <file>components/ConsolinnoBigTile.qml</file>
         <file>components/ConsolinnoPasswordTextField.qml</file>
